--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 html {
   box-sizing: border-box;
+  background-color: #c9b5ab;
+  font-family: PT Sans;
+  font-weight: bold;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
