Add decoration to links in main.css

--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,10 @@ h1 {
 a,
 a:link {
   color: #8f2440;
+  text-decoration: none;
 }
 
 a:hover {
   color: #3f1622;
+  text-decoration: underline;
 }
