--- a/css/main.css
+++ b/css/main.css
@@ -30,3 +30,10 @@ nav li {
   line-height: 1.5;
   font-size: 1.125rem;
 }
+
+figcaption {
+  font-family: 'PT Serif', serif;
+  font-style: italic;
+  text-align: center;
+  font-weight: normal;
+}
