--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,13 @@ nav li {
   font-family: "PT Sans", sans-serif;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
 figcaption {
   font-family: "PT Serif", serif;
   font-style: italic;
