--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ h1 {
   color: #3f1622;
   font-weight: bold;
   font-family: "PT Sans", sans-serif;
+  font-size: 1.5rem;
 }
 
 a,
@@ -28,7 +29,7 @@ a:hover {
 nav li {
   list-style-type: none;
   line-height: 1.5;
-  font-size: 1rem;
+  font-size: 1.125rem;
   font-weight: bold;
   font-family: "PT Sans", sans-serif;
 }
@@ -37,6 +38,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
   width: 100%;
 }
 
